<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gmf_act_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar style="@style/CustomizeToolbar">

        <TextView
            style="@style/CustomizeToolbarTitle"
            android:text="操盘侠账号"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/act_login_format_code_sended"
                android:textColor="@color/gmf_text_black"
                android:textSize="16sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gmf_list_cell_height"
                android:layout_marginTop="20dp"
                android:background="@color/gmf_white">

                <Button
                    android:id="@+id/btn_send_code"
                    style="@style/GMFRoundButton.Yellow"
                    android:layout_width="@dimen/gmf_button_width_small"
                    android:layout_height="@dimen/gmf_button_height_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:text="获取验证码"
                    android:textSize="@dimen/gmf_button_text_size_small"/>

                <EditText
                    android:id="@+id/field_code"
                    style="@style/GMFEditText"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/btn_send_code"
                    android:hint="@string/act_login_hint_input_verify_code"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusDown="@id/field_name"/>

                <View style="@style/BorderLineHorizontal"/>

                <View
                    style="@style/BorderLineHorizontal"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <com.goldmf.GMFund.widget.EditTextWrapper
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/field_name"
                    style="@style/GMFEditText"
                    android:hint="@string/act_login_hint_input_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@id/field_pwd"/>

            </com.goldmf.GMFund.widget.EditTextWrapper>

            <com.goldmf.GMFund.widget.EditTextWrapper
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/field_pwd"
                    style="@style/GMFEditText"
                    android:hint="@string/act_login_hint_input_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </com.goldmf.GMFund.widget.EditTextWrapper>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.goldmf.GMFund.widget.EditTextWrapper
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/field_invite_user_id"
                        style="@style/GMFEditText"
                        android:hint="请输入推荐人邀请码或手机号（可不填）"/>

                    <TextView
                        android:id="@+id/label_invited_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:textColor="@color/gmf_text_grey"
                        android:textSize="14sp"/>

                </com.goldmf.GMFund.widget.EditTextWrapper>

                <TextView
                    android:id="@+id/label_hint_invited_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="更改邀请人，请输入新的邀请码或邀请人的手机号码"
                    android:textColor="@color/gmf_text_grey"
                    android:textSize="14sp"/>

            </LinearLayout>


            <com.goldmf.GMFund.widget.ProgressButton
                android:id="@+id/btn_register"
                android:layout_width="@dimen/gmf_button_width_large"
                android:layout_height="@dimen/gmf_button_height_large"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                app:buttonTheme="yellow"
                app:textSize="@dimen/gmf_button_text_size_large"
                app:text_for_loading="正在注册..."
                app:text_for_normal="@string/act_login_btn_registration"/>

            <TextView
                android:id="@+id/label_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="32dp"
                android:text="注册账号意味着同意《操盘侠用户协议》"
                android:textColor="@color/gmf_text_grey"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>